--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ justify-items: center;
 align-items: center;
 height:600px;
 max-width:1800px;
+padding-bottom:100px;
 
 
 
@@ -76,7 +77,6 @@ animation:color 2s
 
 
 .banner-left{
-/* margin-left:140px; */
 width:600px;
 height:400px;
 margin:0 auto;
@@ -99,10 +99,58 @@ height:500px;
 
 
 }
+/* sponsor */
+
+.sponsor-container{
+max-width:1500px;
+margin-left:170px;
+padding:25px 0 25px 40px;
+display:grid;
+grid-template-columns: repeat(7,1fr);
+justify-content: center;
+align-items: center;
+border-top:1px solid rgb(243, 238, 238);
+border-bottom:1px solid rgb(243, 238, 238);
 
 
+}
+
+/* popular collection */
+
+.box-container{
+display:grid;
+justify-content: space-evenly;
+grid-template-columns:repeat(3,1fr);
+/* height:1000px; */
+max-width: 1800px;
+margin-left: 30px;
+/* gap:50px; */
+width: 100%;
+justify-content: center;
+align-items: center;
+padding:100px 40px;
+margin:0 auto;
+}
 
 
+.box{
+
+border:2px solid rgb(247, 246, 246);  
+margin-bottom: 50px;
+width:350px;
+padding:20px 20px;
+box-shadow: rgb(228, 225, 225) white;
+border-radius: 8px;
+margin-left: 100px;
+}
+.box-img img{
+  width:100%;
+}
+
+.see-more{
+  color:rgb(180, 46, 46);
+  padding-left: 100px;
+}
 
 
 
@@ -144,11 +192,36 @@ height:500px;
 .banner-right img{
  width: 100%;
 }
+.sponsor-container{
+display:grid;
+ grid-template-columns:repeat(3,1fr);
+ 
+ margin: 0 auto;
+
+}
+.box-container{
+  grid-template-columns:repeat(1,1fr);
+}
+.box{
+  align-items: center;
+ margin-right: 110px;
+}
 }
 
 /* Medium device */
 
-@media screen and (min-width:570px) and (max-width:992){
+@media screen and (min-width:570px) and (max-width:992px){
+.sponsor-container{
+display:grid;
+ grid-template-columns:repeat(4,1fr);
+ margin-right:100px;
+ gap:20px;
+
+
+}
+.box-container{
+  grid-template-columns:repeat(2,1fr);
+}
 
 }
 
